# beartype_pls

./: beartype_pls.ipynb  pyproject.toml
